fixes some spacing

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -13,8 +13,7 @@ body {
     /* background-blend-mode: darken;
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    hhnkj*/
+    background-attachment: fixed;*/
   } 
 
 .nav {
